<resources>
    <string name="app_name">Cashmoov Agent</string>
    <string name="language_select">English</string>
    <string name="language_name">English</string>
    <string name="language_code">EN</string>
    <string-array name="Spinner_provider">
        <item>Select provider*</item>
        <item>Cashmoov</item>
    </string-array>
    <string-array name="Spinner_genre">
        <item>Genre*</item>
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string-array name="Spinner_pays">
        <item>Pays*</item>
        <item>Guinée</item>
        <item>Sénégal</item>
        <item>France</item>
    </string-array>
    <string-array name="Spinner_acount_type">
        <item>Type de compte*</item>
        <item>Agent</item>
        <item>Branche</item>
    </string-array>
    <string-array name="Spinner_pays_reception">
        <item>Pays de reception*</item>
        <item>Guinée</item>
        <item>Sénégal</item>
        <item>France</item>
    </string-array>
    <string-array name="Spinner_devise">
        <item>Devise à envoyer*</item>
        <item>GNF</item>
        <item>XOF</item>
        <item>USD</item>
        <item>EURO</item>
    </string-array>
    <string-array name="Spinner_ch_devise">
        <item>Devise: GNF</item>
        <item>Devise: XOF</item>
        <item>Devise: USD</item>
        <item>Devise: EURO</item>
    </string-array>
    <string-array name="Spinner_typeID">
        <item>Type de pièce*</item>
        <item>Carte ID nationale</item>
        <item>Passeport</item>
        <item>Carte electeur</item>
        <item>Carte de sejour</item>

    </string-array>
    <string-array name="array_genderName">
        <item>Select gender*</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="array_genderCode">

        <item>Select gender*</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="use_finger_to_transaction">Use your fingerprint to Transaction</string>
    <string name="title_activity_overdraft_limit">OverdraftLimit</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="to_login">To log in</string>
    <string name="please_enter_username_password">Please enter your Phone number and pin</string>
    <string name="phoneNumber">Phone number</string>
    <string name="password">Password</string>
    <string name="continues">Continue</string>
    <string name="please_see_our_term_condition">Please see our Terms of Service Policy</string>
    <string name="start_now">Start now</string>
    <string name="login_successful">Login Successfully</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="setting">Setting</string>
    <string name="Calculate">Calculate</string>
    <string name="val_amount_min">Please enter minimum amount </string>
    <string name="val_amount_max">Please enter maximum amount </string>
    <string name="profile">Profile</string>
    <string name="Taxvat">VAT</string>
    <string name="Taxfinancial">Financial Tax</string>
    <string name="visit_our_site">Visit our site</string>
    <string name="about_cashmoov_app">About Cashmoov App</string>
    <string name="version">Version : 31-03-2023 12:01 PM</string>
    <string name="platform_cash_moov">Platform : CASH MOOV</string>
    <string name="user_id">User ID : AR1234567890</string>
    <string name="acc_created">Account created!</string>
    <string name="acc_created_message">Dear user, your account has been successfully created. Log in to start using the app</string>
    <string name="continu">Continue</string>
    <string name="beneficiary_management">Beneficiary Management</string>
    <string name="add_contact">Add a contact</string>
    <string name="hello">Hello,</string>
    <string name="dashboard">Dashboard</string>
    <string name="pay">Pay</string>
    <string name="balance">Balance</string>
    <string name="our_operations">Our Operations</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="airtime_purchase">Airtime Purchase</string>
    <string name="payment">Payments</string>
    <string name="paymentnew">Payment</string>
    <string name="merchant_payment">Pay</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="receive_remittance">Receive Remittance</string>
    <string name="fee">Fee</string>
    <string name="service_point">Service Point</string>
    <string name="complete_profile">Complete the profile</string>
    <string name="complet_70">70% complete</string>
    <string name="out_8_10_complete">8 out of 10 complete</string>
    <string name="recharge_payment">Recharge &amp; Payment</string>
    <string name="next">Next</string>
    <string name="ignore">Ignore</string>
    <string name="to_start">Start</string>
    <string name="to_end">End</string>
    <string name="watch_video">Watch the video</string>
    <string name="video_tutorial_message">If you\'re new and need help, watch this short tutorial to get started.</string>
    <string name="already_acc_login">Already have an account? - Log in</string>
    <string name="register">Register</string>
    <string name="register_message">Please enter your valid phone number. We will send you a 4-digit code to verify the account.</string>
    <string name="enter_location">Enter your location</string>
    <string name="enter_phone_no">Enter your phone number</string>
    <string name="see_terms_policy">Please see our Terms of Service Policy</string>
    <string name="skip">Skip</string>
    <string name="complete_your_info">Complete your information</string>
    <string name="register_info_message">To complete your registration we need certain information.</string>
    <string name="name">Name</string>
    <string name="fname">First name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="email_star">Email*</string>
    <string name="address_star">Address Line 1*</string>
    <string name="city_star">City *</string>
    <string name="username">
        <font fgcolor="#000000">Samuel</font><font fgcolor="#4f62c0"> </font><font fgcolor="#4f62c0">Flatcher</font>
    </string>
    <string name="occupation">Occupation</string>
    <string name="dob">Date of Birth</string>
    <string name="choose_pin">Choose PIN Ex: 1234</string>
    <string name="repeat_pin">Repeat PIN Ex: 1234</string>
    <string name="attach_your_id">Attach your ID</string>
    <string name="attach_id_message">Take a photo of your ID with your camera.</string>
    <string name="front">Ex: Front*</string>
    <string name="ex_verso">Ex: Back*</string>
    <string name="id_proof_no">Id Proof Number</string>
    <string name="verification">Verification</string>
    <string name="verification_message">Enter the 4-digit OTP code we sent to +224 621 123 123.</string>
    <string name="session_expired_send_back">The session expires in 60 minutes. Haven\'t received a code? Send it back</string>
    <string name="my_account">My Account</string>
    <string name="your_currency">Your Currency: GNF</string>
    <string name="acc_statement">Account Statements</string>
    <string name="last_transactions">Your Last Transactions</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="recharge">Recharge</string>
    <string name="your_beneficiaries">Beneficiaries</string>
    <string name="language">Language</string>
    <string name="confidentiality">Confidentiality</string>
    <string name="share_app">Share App</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="about">About</string>
    <string name="change_pin">Change Pin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset">Reset</string>
    <string name="hello_this_is_your">Hello this is your</string>
    <string name="cash">Cash</string>
    <string name="moov_qr">Moov QR</string>
    <string name="scan_me">Scan Me</string>
    <string name="change_language">Change Language</string>
    <string name="choose_language">Please choose the language :</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="action_requires_biometric_auth">This action requires biometric authentication</string>
    <string name="protection_of_sensitive">The protection of sensitive data is not active.</string>
    <string name="activate_ptotection">Activate Protection</string>
    <string name="press_cancel_return_to_dashboard">Press the cancel button to return to the dashboard</string>
    <string name="cancel">Cancel</string>
    <string name="wallentnotfound">Wallet Owner Not Found</string>
    <string name="ComingSoon">Coming Soon.....</string>
    <string name="useralreadyexists"> user already exists</string>
    <string name="mobile_number_exits_with_agent">"Mobile number exists with agent</string>
    <string name="mobile_number_exits_with_branch">"Mobile number exists with branch</string>
    <string name="mobile_number_exits_with_subscriber">"Mobile number exists with subscriber</string>
    <string name="delete_configuration">Are you sure you want to delete the configuration?</string>
    <string name="this_action_reset_all_settings">This action will reset all of the application\'s settings.</string>
    <string name="need_to_link_account">You will need to link this app to your account again</string>
    <string name="confirm">Confirm</string>
    <string name="current_profile_photo">Your current profile photo</string>
    <string name="select_new_profile_photo">Select your new profile photo</string>
    <string name="you_are_reloading">You make a recharge</string>
    <string name="my_number">My number</string>
    <string name="another_number">Another Number</string>
    <string name="bank_transfer_to_wallet">Bank transfer to your wallet</string>
    <string name="transaction_details">Transaction details</string>
    <string name="select_bank">Select Bank*</string>
    <string name="amount_to_paid">Amount paid :</string>
    <string name="amount">Amount :</string>
    <string name="valid_phone_number">Phone number*</string>
    <string name="valid_address">Address*</string>
    <string name="valid_select_gender">Select Gender*</string>
    <string name="valid_dob">Date of Birth*</string>
    <string name="vaild_id_proof_no">Id Proof Number*</string>
    <string name="country">Country</string>
    <string name="merchant_details">Merchant Details</string>
    <string name="first_name">First name</string>
    <string name="sending_currencey">Sending Currency*</string>
    <string name="receive_courency">Receiving Currency :</string>
    <string name="choose_the_operation">Choose the operation</string>
    <string name="receive_money">Receive Money</string>
    <string name="add_agent">Add Agent</string>
    <string name="add_branch">Add Branch</string>
    <string name="valid_select_region">Select Region*</string>
    <string name="valid_select_business_type">Select Business Type*</string>
    <string name="sending_country_star">Sending country*</string>
    <string name="agentName">Agent name</string>
    <string name="agent_mobileNumber">Agent mobile no</string>
    <string name="last_name">Last name</string>
    <string name="merchant_name">Merchant Name :</string>
    <string name="select_issuing_country">Select Issuing Country</string>
    <string name="subscriber_number_star">Subscriber Number*</string>
</resources>