<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <include layout="@layout/toolbar_active"></include>

            <LinearLayout
                android:id="@+id/ll_sender_part_2"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aileron_bold"
                        android:lineSpacingExtra="3sp"
                        android:text="@string/receive_money"
                        android:textColor="#29304d"
                        android:textSize="@dimen/_16sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="#29304d"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/aileron_bold"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/merchant_details" />




                <EditText
                    android:id="@+id/et_sender_merchantName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="textPersonName"
                    android:lineSpacingExtra="10sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/merchant_name"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold" />

                <AutoCompleteTextView
                    android:id="@+id/et_sender_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="number"
                    android:lineSpacingExtra="10sp"
                    android:drawableRight="@drawable/ic_contact"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/valid_phone_number"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="@color/bgColorHint"
                    android:lineSpacingExtra="10sp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textColor="@color/textColorLBlack">
                    <TextView
                        android:id="@+id/spBusinessType"
                        android:padding="@dimen/_5sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableRight="@drawable/ic_arrow_down"
                        android:text="@string/valid_select_business_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorLBlack"
                        android:textSize="@dimen/_15sdp"
                        android:fontFamily="@font/aileron_semibold"  />
                </LinearLayout>

                <TextView
                    android:id="@+id/spinner_sender_gender"
                    android:text="@string/valid_select_gender"
                    android:visibility="gone"
                    style="@style/SpinnerStyleNew1" />


                <TextView
                    android:id="@+id/dobText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:visibility="gone"
                    android:textSize="@dimen/_15sdp"

                    android:text="@string/valid_dob"></TextView>

                <TextView
                    android:text="@string/select_issuing_country"
                    android:visibility="visible"
                    style="@style/SpinnerStyleNew1"/>
                <EditText
                    android:id="@+id/et_sender_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:visibility="gone"
                    android:inputType="textPersonName"
                    android:lineSpacingExtra="10sp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/valid_address"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold" />

                <TextView
                    android:id="@+id/spinner_senderCountry"
                    android:text="@string/sending_country_star"
                    android:visibility="gone"
                    style="@style/SpinnerStyleNew1"/>

                <TextView
                    android:id="@+id/spinner_sender_region"
                    android:text="@string/valid_select_region"
                    android:visibility="gone"
                    style="@style/SpinnerStyleNew1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="phone"
                    android:lineSpacingExtra="10sp"
                    android:digits="0123456789-/"

                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/subscriber_number_star"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold"  />


                <EditText
                    android:id="@+id/et_sender_idproofNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="phone"
                    android:lineSpacingExtra="10sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/first_name"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold"  />

                <TextView
                    android:id="@+id/dobidproffText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:visibility="gone"
                    android:textSize="@dimen/_15sdp"

                    android:text="@string/vaild_id_proof_no"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="visible"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="phone"
                    android:lineSpacingExtra="10sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/last_name"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold"  />




                <TextView
                    android:text="@string/sending_currencey"
                    android:visibility="visible"
                    style="@style/SpinnerStyleNew1"/>
                <TextView
                    android:text="@string/receive_courency"
                    android:visibility="visible"
                    style="@style/SpinnerStyleNew1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="textPersonName"
                    android:lineSpacingExtra="10sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/amount"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/btn_edittextname"
                    android:backgroundTint="#999999"
                    android:inputType="textPersonName"
                    android:lineSpacingExtra="10sp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:hint="@string/amount_to_paid"
                    android:textColor="#323232"
                    android:textSize="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_semibold" />

                <TextView
                    android:id="@+id/tvNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="#ffffff"
                    android:lineSpacingExtra="3sp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/btn_blue"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:fontFamily="@font/aileron_bold"
                    android:gravity="center"
                    android:text="@string/next" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
