<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/check"
            android:backgroundTint="@color/colorPrimaryDark" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/choose_the_operation"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btnAddAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_blue"
                android:text="@string/add_agent"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnAddBranch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/btn_blue"
                android:text="@string/add_branch"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>


    </LinearLayout>
</LinearLayout>