<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/click_row_layout"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"



        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"


            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:weightSum="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/agentName_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:gravity="left"
                    android:padding="2dp"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/agentName"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"

                    android:gravity="left"
                    android:padding="2dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    />






            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="1"
                android:padding="@dimen/_10sdp"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/agent_mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:gravity="left"
                    android:padding="2dp"

                    android:text="@string/agent_mobileNumber"
                    android:textColor="@color/red_600"
                    android:textSize="12sp"


                    android:textStyle="bold"></TextView>


                <TextView
                    android:id="@+id/countryName_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/green_600"

                    android:padding="2dp"
                    android:text="@string/country"
                    ></TextView>





            </LinearLayout>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>